fix(core): fix menu & tooltip z-indexes feat(core): add basic i18n

--- a/core/src/components/cat-tooltip/cat-tooltip.scss
+++ b/core/src/components/cat-tooltip/cat-tooltip.scss
@@ -22,6 +22,7 @@
   opacity: 0;
   box-shadow: rgb(0 0 0 / 8%) 0 1px 8px 0;
   border: 1px solid cat-token('color.ui.border.default');
+  z-index: $cat-tooltip-z-index;
 
   &-show {
     opacity: 1;
