--- a/core/src/styles/_variables.scss
+++ b/core/src/styles/_variables.scss
@@ -14,6 +14,7 @@ $cat-nav-padding-horizontal: cat-token('size.spacing.m');
 // --------
 
 $cat-menu-z-index: 100;
+$cat-tooltip-z-index: 200;
 
 // --------
 // -- Typography
